--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
                 height="260"
                 class="team-pictures pictures"
               />
-              <h3 class="team-list-name">Ігор Дем'яненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="content">
+                <h3 class="team-list-name">Ігор Дем'яненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -173,8 +175,10 @@
                 height="260"
                 class="team-pictures pictures"
               />
-              <h3 class="team-list-name">Ольга Рєпіна</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="content">
+                <h3 class="team-list-name">Ольга Рєпіна</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -185,8 +189,10 @@
                 height="260"
                 class="team-pictures pictures"
               />
-              <h3 class="team-list-name">Микола Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="content">
+                <h3 class="team-list-name">Микола Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -197,8 +203,10 @@
                 height="260"
                 class="team-pictures pictures"
               />
-              <h3 class="team-list-name">Михайло Єрмаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="content">
+                <h3 class="team-list-name">Михайло Єрмаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
