--- a/index.html
+++ b/index.html
@@ -44,11 +44,21 @@
         <!-- контакти -->
         <ul class="site-contacts">
           <li class="item">
+            <a href="" class="icon-contact">
+              <svg class="icon-tel" widht="10" height="16">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+            </a>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
+            <a href="" class="icon-contact">
+              <svg class="icon-tel" widht="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+            </a>
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -68,13 +78,21 @@
           </button>
         </div>
       </section>
+
       <!-- блок 1 -->
+
       <section class="section-features section">
         <div class="container">
           <h2 class="features-title visually-hidden">Особливості</h2>
 
           <ul class="features-items">
             <li class="item-list">
+              <div class="icon-features">
+                <svg class="icon-antenna" widht="70" height="70">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="title-item-list">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-items-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -83,6 +101,11 @@
             </li>
 
             <li class="item-list">
+              <div class="icon-features">
+                <svg class="icon-clock" widht="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title-item-list">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-items-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -91,6 +114,11 @@
             </li>
 
             <li class="item-list">
+              <div class="icon-features">
+                <svg class="icon-diagram" widht="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title-item-list">ПЛАНУВАННЯ</h3>
               <p class="features-items-text">
                 Так само консультація з широким активом значною мірою зумовлює.
@@ -98,6 +126,11 @@
             </li>
 
             <li class="item-list">
+              <div class="icon-features">
+                <svg class="icon-astronaut" widht="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title-item-list">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-items-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -164,6 +197,13 @@
               <div class="content">
                 <h3 class="team-list-name">Ігор Дем'яненко</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-social-icon">
+                  <li class="social-icon">
+                    <svg height="44">
+                      <use></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -213,6 +253,51 @@
       </section>
     </main>
 
+    <!-- ПОСТІЙНІ КЛІЄНТИ -->
+
+    <section class="section-clients section">
+      <div class="container">
+        <h2 class="clients-title">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><svg class="icon-diagram" widht="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use></svg
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </section>
     <!-- футер -->
     <footer class="footer-items">
       <div class="container">
