add new sprite/icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
 
           <!-- навігація -->
           <ul class="site-nav">
-            <li class="item">
+            <li class="item current">
               <a href="./index.html" class="link">Студія</a>
             </li>
-            <li class="item current">
+            <li class="item">
               <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
             <li class="item"><a href="" class="link">Контакти</a></li>
@@ -44,12 +44,19 @@
         <!-- контакти -->
         <ul class="site-contacts">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="contact-link link"
+              ><svg class="icon-envelope" widht="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
+
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contact-link link"
+              ><svg class="icon-tel" widht="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
