--- a/index.html
+++ b/index.html
@@ -44,22 +44,19 @@
         <!-- контакти -->
         <ul class="site-contacts">
           <li class="item">
-            <a href="" class="icon-contact">
-              <svg class="icon-tel" widht="10" height="16">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-            </a>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="contact-link link"
+              ><svg class="icon-envelope" widht="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
+
           <li class="item">
-            <a href="" class="icon-contact">
-              <svg class="icon-tel" widht="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-            </a>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contact-link link"
+              ><svg class="icon-tel" widht="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -197,11 +194,37 @@
               <div class="content">
                 <h3 class="team-list-name">Ігор Дем'яненко</h3>
                 <p class="team-text">Product Designer</p>
-                <ul class="team-social-icon">
-                  <li class="social-icon">
-                    <svg height="44">
-                      <use></use>
-                    </svg>
+                <ul class="team-social-icon-list">
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -218,6 +241,39 @@
               <div class="content">
                 <h3 class="team-list-name">Ольга Рєпіна</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-social-icon-list">
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -232,6 +288,39 @@
               <div class="content">
                 <h3 class="team-list-name">Микола Тарасов</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-social-icon-list">
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -246,6 +335,39 @@
               <div class="content">
                 <h3 class="team-list-name">Михайло Єрмаков</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-social-icon-list">
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-icon-item">
+                    <a href="" class="linc-icon">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -259,41 +381,52 @@
       <div class="container">
         <h2 class="clients-title">Постійні клієнти</h2>
         <ul class="clients-list">
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo1"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-2"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-client-logo-3"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-4"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-5"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item">
-            <a href=""
-              ><svg class="icon-diagram" widht="70" height="70">
-                <use href="./images/sprite.svg#icon-diagram"></use></svg
-            ></a>
+
+          <li class="client-item">
+            <a href="" class="client-linc-icon">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -327,6 +460,43 @@
               </li>
               <li class="address-contacts">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="social-container">
+            <h2 class="footer-social-title">Приєднуйтесь</h2>
+            <ul class="footer-social-icon-list">
+              <li class="social-icon-item">
+                <a href="" class="linc-icon">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram-1"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
