--- a/portfolio.html
+++ b/portfolio.html
@@ -370,32 +370,71 @@
     <!-- футер -->
     <footer class="footer-items">
       <div class="container">
-        <a href="./index.html" class="logo logo-footer"
-          ><span class="title-logo">Web</span>Studio
-        </a>
-
-        <!-- адреса -->
-        <address class="address-items">
-          <div class="address-container">
-            <ul class="address-list">
-              <li class="address-place">
-                <a
-                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4267703,30.537616,18z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="link"
-                  ><span class="place-tex"
-                    >м. Київ, пр-т Лесі Українки, 26</span
+        <div class="address-container">
+          <a href="./index.html" class="logo logo-footer"
+            ><span class="title-logo">Web</span>Studio
+          </a>
+  
+          <!-- адреса -->
+          <address class="address-items">
+            <div class="address-container">
+              <ul class="address-list">
+                <li class="address-place">
+                  <a
+                    href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4267703,30.537616,18z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    ><span class="place-tex"
+                      >м. Київ, пр-т Лесі Українки, 26</span
+                    >
+                  </a>
+                </li>
+                <li class="address-contacts">
+                  <a href="mailto:info@devstudio.com" class="link"
+                    >info@devstudio.com</a
                   >
+                </li>
+                <li class="address-contacts">
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </div>
+        </div>
+
+          <div class="social-container">
+            <h2 class="footer-social-title">Приєднуйтесь</h2>
+            <ul class="footer-social-icon-list">
+              <li class="social-icon-item">
+                <a href="" class="linc-icon bot">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram-1"></use>
+                  </svg>
                 </a>
               </li>
-              <li class="address-contacts">
-                <a href="mailto:info@devstudio.com" class="link"
-                  >info@devstudio.com</a
-                >
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon bot">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-contacts">
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon bot">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-icon-item">
+                <a href="" class="linc-icon bot">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
