--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
 
           <!-- навігація -->
           <ul class="site-nav">
-            <li class="item current">
+            <li class="item">
               <a href="./index.html" class="link">Студія</a>
             </li>
-            <li class="item">
+            <li class="item current">
               <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
             <li class="item"><a href="" class="link">Контакти</a></li>
@@ -219,25 +219,25 @@
 
           <ul class="portfolio-nav">
             <li class="item">
-              <button type="button" class="batton-portfolio button">Усі</button>
+              <button type="button" class="button-portfolio button">Усі</button>
             </li>
             <li class="item">
-              <button type="button" class="batton-portfolio button">
+              <button type="button" class="button-portfolio button">
                 Веб-сайти
               </button>
             </li>
             <li class="item">
-              <button type="button" class="batton-portfolio button">
+              <button type="button" class="button-portfolio button">
                 Додатки
               </button>
             </li>
             <li class="item">
-              <button type="button" class="batton-portfolio button">
+              <button type="button" class="button-portfolio button">
                 Дизайн
               </button>
             </li>
             <li class="item">
-              <button type="button" class="batton-portfolio button">
+              <button type="button" class="button-portfolio button">
                 Маркетинг
               </button>
             </li>
