fix bugs with icons

--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@
         </ul>
       </div>
     </section>
+
+    
     <!-- футер -->
     <footer class="footer-items">
       <div class="container">
@@ -471,7 +473,7 @@
             <ul class="footer-social-icon-list">
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"></use>
                   </svg>
                 </a>
@@ -479,7 +481,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
@@ -487,7 +489,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
@@ -495,7 +497,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
