--- a/portfolio.html
+++ b/portfolio.html
@@ -63,153 +63,6 @@
     </header>
 
     <main>
-      <!-- кнопки навігації (АРХІВ) -->
-
-      <!-- <section class="portfolio-section section">
-        <div class="container">
-          <h1 class="portfolio-title visually-hidden">Портфоліо</h1>
-
-          <ul class="portfolio-nav">
-            <li class="item">
-              <button type="button" class="batton-portfolio button">Усі</button>
-            </li>
-            <li class="item">
-              <button type="button" class="batton-portfolio button">
-                Веб-сайти
-              </button>
-            </li>
-            <li class="item">
-              <button type="button" class="batton-portfolio button">
-                Додатки
-              </button>
-            </li>
-            <li class="item">
-              <button type="button" class="batton-portfolio button">
-                Дизайн
-              </button>
-            </li>
-            <li class="item">
-              <button type="button" class="batton-portfolio button">
-                Маркетинг
-              </button>
-            </li>
-          </ul>
-        </div>
-      </section> -->
-
-      <!-- галерея робіт (АРХІВ) -->
-
-      <!-- <section class="gallery-section section">
-        <div class="container">
-          <h2 class="gallery-title visually-hidden">Приклади робіт</h2>
-
-          <ul class="gallery-list">
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-1.jpg"
-                alt="Веб-сайт"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Технокряк</h3>
-              <p class="gallery-tex">Веб-сайт</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-2.jpg"
-                alt="гра в баскетбол"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">
-                Постер New Orlean vs Golden Star
-              </h3>
-              <p class="gallery-tex">Дизайн</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-3.jpg"
-                alt="логотип ресторану"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Ресторан Seafood</h3>
-              <p class="gallery-tex">Додаток</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-4.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Проєкт Prime</h3>
-              <p class="gallery-tex">Маркетинг</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-5.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Проєкт Boxes</h3>
-              <p class="gallery-tex">Додаток</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-6.jpg"
-                alt="монітор"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Inspiration has no Borders</h3>
-              <p class="gallery-tex">Веб-сайт</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-7.jpg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Видання Limited Edition</h3>
-              <p class="gallery-tex">Дизайн</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-8.jpg"
-                alt="етикетка"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Проєкт LAB</h3>
-              <p class="gallery-tex">Маркетинг</p>
-            </li>
-
-            <li class="gallery-list-item">
-              <img
-                src="./images/2-9.jpg"
-                alt="нетбук"
-                width="370"
-                height="294"
-              />
-              <h3 class="gallery-list-title">Growing Business</h3>
-              <p class="gallery-tex">Додаток</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main> -->
-
-      <!-- Так повинно було б бути -->
 
       <!-- Портфоліо -->
 
@@ -245,129 +98,150 @@
 
           <ul class="gallery-list">
             <li class="gallery-list-item">
-              <img
-                src="./images/2-1.jpg"
-                alt="Веб-сайт"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Технокряк</h3>
-                <p class="gallery-tex">Веб-сайт</p>
-              </div>
+             <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-1.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Технокряк</h3>
+                  <p class="gallery-tex">Веб-сайт</p>
+                </div>
+             </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-2.jpg"
-                alt="гра в баскетбол"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">
-                  Постер New Orlean vs Golden Star
-                </h3>
-                <p class="gallery-tex">Дизайн</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-2.jpg"
+                  alt="гра в баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="gallery-tex">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-3.jpg"
-                alt="логотип ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Ресторан Seafood</h3>
-                <p class="gallery-tex">Додаток</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-3.jpg"
+                  alt="логотип ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Ресторан Seafood</h3>
+                  <p class="gallery-tex">Додаток</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-4.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Проєкт Prime</h3>
-                <p class="gallery-tex">Маркетинг</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-4.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Проєкт Prime</h3>
+                  <p class="gallery-tex">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-5.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Проєкт Boxes</h3>
-                <p class="gallery-tex">Додаток</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-5.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Проєкт Boxes</h3>
+                  <p class="gallery-tex">Додаток</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-6.jpg"
-                alt="монітор"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Inspiration has no Borders</h3>
-                <p class="gallery-tex">Веб-сайт</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-6.jpg"
+                  alt="монітор"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Inspiration has no Borders</h3>
+                  <p class="gallery-tex">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-7.jpg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Видання Limited Edition</h3>
-                <p class="gallery-tex">Дизайн</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-7.jpg"
+                  alt="книга"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Видання Limited Edition</h3>
+                  <p class="gallery-tex">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-8.jpg"
-                alt="етикетка"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Проєкт LAB</h3>
-                <p class="gallery-tex">Маркетинг</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-8.jpg"
+                  alt="етикетка"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Проєкт LAB</h3>
+                  <p class="gallery-tex">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-list-item">
-              <img
-                src="./images/2-9.jpg"
-                alt="нетбук"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h3 class="gallery-list-title">Growing Business</h3>
-                <p class="gallery-tex">Додаток</p>
-              </div>
+              <a href="" class="gallery-icon link">
+                <img
+                  src="./images/2-9.jpg"
+                  alt="нетбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h3 class="gallery-list-title">Growing Business</h3>
+                  <p class="gallery-tex">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
+
     <!-- футер -->
+
+
     <footer class="footer-items">
       <div class="container">
         <div class="address-container">
@@ -407,7 +281,7 @@
             <ul class="footer-social-icon-list">
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram-1"></use>
                   </svg>
                 </a>
@@ -415,7 +289,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
@@ -423,7 +297,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
@@ -431,7 +305,7 @@
 
               <li class="social-icon-item">
                 <a href="" class="linc-icon bot">
-                  <svg class="social-icon" width="20" height="20">
+                  <svg class="social-icon join" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
